# promi

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: tests.yml
benches/: xes.rs
examples/: flow.rs  main.py  streaming.rs
src/: .lib.rs.un~  dev_util.rs  error.rs  lib.rs  main.rs
src/stream/: buffer.rs  channel.rs  duplicator.rs  filter.rs  log.rs  mod.rs  observer.rs  plugin.rs  repair.rs  split.rs  stats.rs  validator.rs  void.rs  xes.rs  xesext.rs  xml_util.rs
src/stream/core/: artifact.rs  attribute.rs  component.rs  mod.rs  sink.rs  stream.rs
src/stream/extension/: concept.rs  mod.rs  organizational.rs  time.rs
src/stream/flow/: executor.rs  graph.rs  mod.rs  pipe.rs  segment.rs  util.rs
static/flow/: flow.json  flow.yml
static/xes/: README.md  validate.sh  xes-ieee-1849-2016.xsd  xesext-ieee-1849-2016.xsd
static/xes/book/: L1.xes  L10.xes  L11.xes  L12.xes  L2.xes  L3.xes  L4.xes  L5.xes  L6.xes  L7.xes  L8.xes  L9.xes  bigger-example.xes
static/xes/correct/: boolean_correct_value.xes  classifier_correct_attributes.xes  classifier_event_correct_attributes.xes  classifier_trace_correct_attributes.xes  date_correct_value.xes  event_correct_attributes.xes  extension_correct_attributes.xes  extension_standard.xes  global_event_string_correct_attributes.xes  global_no_attributes.xes  global_string_correct_attributes.xes  global_trace_string_correct_attributes.xes  id_correct_value.xes  int_correct_value.xes  log_correct_attributes.xes  real_correct_value.xes  string_correct_attributes.xes  trace_correct_attributes.xes
static/xes/non_parsing/: boolean_incorrect_value.xes  broken_xml.xes  classifier_incorrect_scope.xes  classifier_no_attributes.xes  date_incorrect_value.xes  date_no_t_z_d.xes  element_incorrect.xes  (+9 more)
(+41 files in other folders)
