[package]
name = "promi"
version = "0.0.0"
authors = ["0b11001111"]
edition = "2018"
description = "Process Mining for Rust"
readme = "README.md"
repository = "https://github.com/PM4Rs/promi"
license = "MIT OR Apache-2.0"
keywords = ["processmining", "datamining", "streaming"]

[dependencies]
log = "0.4"
thiserror = "1.0"
lazy_static = "1.4"
chrono = "0.4"
rand = "0.7"
rand_pcg = "0.2"
regex = "1.3"
quick-xml = "0.19"

[profile.release]
panic = 'abort'

