[package]
name = "promi"
version = "0.0.0"
authors = ["0b11001111"]
edition = "2018"
description = "Process Mining for Rust"
readme = "README.md"
repository = "https://github.com/PM4Rs/promi"
license = "MIT OR Apache-2.0"
keywords = ["processmining", "datamining", "streaming"]

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
log = "0.4"
rand = "0.7"
rand_pcg = "0.2"
regex = "1.3"
thiserror = "1.0"
quick-xml = "0.19"

[dev-dependencies]
is_close = "0.1"
simple_logger = "1.9"

[profile.release]
panic = 'abort'

