[package]
name = "promi"
version = "0.0.0"
authors = ["0b11001111"]
edition = "2018"
description = "Process Mining for Rust"
readme = "README.md"
repository = "https://github.com/PM4Rs/promi"
license = "MIT OR Apache-2.0"
keywords = ["processmining", "datamining", "streaming"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
petgraph = "0.5"
rand = "0.8"
rand_pcg = "0.3"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
typetag = "0.1"
quick-xml = "0.22"

[dev-dependencies]
is_close = "0.1"
serde_json = "1.0"
serde_yaml = "0.8"
simple_logger = "1.9"

[profile.release]
panic = 'abort'

